# library-backend

./: Cargo.toml
src/: main.rs
src/author/: author_controller.rs  author_service.rs  mod.rs
src/book/: book_controller.rs  book_service.rs  mod.rs
src/error/: macros.rs  mod.rs  rest_error.rs
src/http/: rest_error.rs
