[package]
name = "library-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
sqlx = { version = "0.8.2", features = ["runtime-async-std", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }